Fixed some layout issues + placement of red ones
Now, the "sunk" parts of the ship will always be first!

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -387,6 +387,21 @@ div .quadruple.down {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 2rem;
+}
+
+.outer-player,
+.outer-opponent {
+    display: flex;
+    align-items: center;
+}
+
+.outer-player {
+    flex-direction: row;
+}
+
+.outer-opponent {
+    flex-direction: row-reverse;
 }
 
 .player-image {
@@ -497,23 +512,23 @@ div .quadruple.down {
     margin-right: 5px;
 }
 .previewboat {
-    height: 40px;
+    height: 30px;
     background-color: green;
-    margin: 5px;
+    margin: 1rem;
     display: flex;
     flex-direction: row;
 }
 
 .boatLength1 {
-    width: 80px;
+    width: 60px;
 }
 
 .boatLength2 {
-    width: 120px;
+    width: 80px;
 }
 
 .boatLength3 {
-    width: 160px;
+    width: 120px;
 }
 
 .subpart {
